# packages/server/lib/nixstasis/devices/device.ex
@@ -192,7 +192,12 @@ defmodule Nixstasis.Devices.Device do
                        :remote_access_default_profile,
                        :remote_access_profile,
                        :remote_access_expires_at,
-                       :remote_access_owner
+                       :remote_access_owner,
+                       :ssh_host_key,
+                       :ssh_host_key_pending,
+                       :ssh_host_key_trusted_at,
+                       :ssh_host_key_trusted_by,
+                       :ssh_host_key_previous_fingerprint
                      ]}
     end
 
@@ -216,6 +221,18 @@ defmodule Nixstasis.Devices.Device do
       validate {Nixstasis.Devices.Validations.SchemaDefinition, []}
       validate {Nixstasis.Devices.Validations.ApprovalTransition, []}
       change Nixstasis.Devices.Changes.RemoteAccessProjection
+    end
+
+    update :update_ssh_host_key_state do
+      require_atomic? false
+
+      accept [
+        :ssh_host_key,
+        :ssh_host_key_pending,
+        :ssh_host_key_trusted_at,
+        :ssh_host_key_trusted_by,
+        :ssh_host_key_previous_fingerprint
+      ]
     end
 
     action :list_runtime_devices, :map do
@@ -264,6 +281,7 @@ defmodule Nixstasis.Devices.Device do
       argument :telemetry, :map, default: %{}
       argument :connection_status, :map, default: %{}
       argument :command_inventory, :map
+      argument :ssh_host_key, :string
 
       run fn input, _context ->
         case Devices.get_device(input.arguments.device_id) do
@@ -271,6 +289,9 @@ defmodule Nixstasis.Devices.Device do
             case Monitoring.heartbeat(device, heartbeat_payload(input.arguments)) do
               {:ok, updated_device, commands} ->
                 {:ok, %{data: Monitoring.heartbeat_response_data(updated_device, commands)}}
+
+              {:error, {:telemetry_limits, message}} ->
+                {:error, Ash.Error.Action.InvalidArgument.exception(field: :telemetry, message: message)}
 
               {:error, _reason} ->
                 {:error, "heartbeat processing failed"}
@@ -367,7 +388,7 @@ defmodule Nixstasis.Devices.Device do
   end
 
   defp heartbeat_payload(arguments) do
-    Map.take(arguments, [:telemetry, :connection_status, :command_inventory])
+    Map.take(arguments, [:telemetry, :connection_status, :command_inventory, :ssh_host_key])
   end
 
   attributes do
@@ -432,6 +453,16 @@ defmodule Nixstasis.Devices.Device do
       default "default"
       constraints match: ~r/^[a-z][a-z0-9._-]{0,63}$/
     end
+
+    attribute :ssh_host_key, :string
+
+    attribute :ssh_host_key_pending, :string
+
+    attribute :ssh_host_key_trusted_at, :utc_datetime_usec
+
+    attribute :ssh_host_key_trusted_by, :string
+
+    attribute :ssh_host_key_previous_fingerprint, :string
 
     attribute :remote_access_profile, :string do
       allow_nil? false
